Solutions of the exercises for the course Java OOP