@@ -14,28 +14,19 @@ package com.amigoscode._3_oop._3_abstractclasses;
  * - Forcing subclasses to provide implementations
  */
 
-// TODO: 1 - Make this class abstract by adding the `abstract` keyword.
-//   An abstract class cannot be instantiated directly.
-public class Shape {
+public abstract class Shape {
 
-    // TODO: 2 - Declare an abstract method: double area()
-    //   Abstract methods have no body — just the signature followed by ;
-    //   Every subclass of Shape must implement this method.
+    public abstract double area();
 
+    public abstract double perimeter();
 
-    // TODO: 3 - Declare an abstract method: double perimeter()
-    //   Every subclass of Shape must implement this method.
+    public void describe() {
+        System.out.println("This shape has area: %.2f and perimeter: %.2f".formatted(area(), perimeter()));
+    }
 
-
-    // TODO: 4 - Create a concrete (non-abstract) method: void describe()
-    //   This method should print:
-    //   "This shape has area: <area()> and perimeter: <perimeter()>"
-    //   Note: you can call abstract methods from concrete methods!
-    //   At runtime, the subclass implementation will be used.
-
-
-    // TODO: 5 - Override toString() to return:
-    //   "Shape[area=<area()>, perimeter=<perimeter()>]"
-    //   Use String.format("%.2f", value) to format to 2 decimal places.
+    @Override
+    public String toString() {
+        return "Shape{area=%.2f, perimeter=%.2f}".formatted(area(), perimeter());
+    }
 
 }
